fix: archive search wrap on mobile

--- a/app/archive/components/posts-list/posts-list.module.scss
+++ b/app/archive/components/posts-list/posts-list.module.scss
@@ -23,10 +23,11 @@
 .title {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1ch;
     width: 100%;
     height: var(--line-height);
-    // margin-bottom: calc(var(--line-height) * 3);
-    margin-bottom: calc(var(--line-height) * 2);
+    margin-bottom: calc(var(--line-height) * 3);
 
     & {
         > div:first-of-type {
